# sceua

./: DESCRIPTION  LICENSE  MD5  NAMESPACE  README.md
R/: extendr-wrappers.R  sceua.R
man/: sceua.Rd
src/: Makevars.in  Makevars.win.in  entrypoint.c  sceua-win.def
src/rust/: Cargo.toml  vendor.tar.xz
src/rust/rust/: Cargo.toml  LICENSE  README.md
src/rust/rust/src/: cce.rs  config.rs  duan_test_func.rs  duan_tests.rs  error.rs  lib.rs  population.rs  rng.rs  sce.rs
src/rust/src/: lib.rs
tests/: testthat.R
tests/testthat/: test-sceua.R
tools/: config.R
